--- a/app/src/main/res/layout/air.xml
+++ b/app/src/main/res/layout/air.xml
@@ -20,6 +20,7 @@
         android:layout_marginLeft="120dp"
         android:background="@color/colorPrimary"
         android:text="현재 미세먼지"
+        android:fontFamily="@font/fontstyle"
         android:textSize="24sp" />
 
     <EditText
@@ -41,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
             android:text="미세먼지 상한선"
+            android:fontFamily="@font/fontstyle"
             android:textSize="24sp"/>
 
         <EditText
@@ -63,6 +65,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
             android:text="공기청정기"
+            android:fontFamily="@font/fontstyle"
+            android:textStyle="bold"
             android:textSize="24sp"/>
 
         <ToggleButton
