--- a/app/src/main/res/layout/light.xml
+++ b/app/src/main/res/layout/light.xml
@@ -2,41 +2,70 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:text="light 화면을 전환했습니다."
-        android:textSize="30dp" />
+    <ImageView
+        android:layout_marginTop="80dp"
+        android:layout_width="101dp"
+        android:layout_height="100dp"
+        android:src="@drawable/sun">
+    </ImageView>
 
-
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="150dp"
-        android:background="@color/colorPrimary"
-        android:text="현재 조도"
-        android:textSize="24sp" />
+        android:layout_margin="10dp">
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="70dp"
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/button_roundedge"
+            android:fontFamily="@font/fontstyle"
+            android:text="현재 조도"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberSigned" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="160dp"
-        android:ems="10"
-        android:inputType="numberSigned" />
+        android:layout_margin="10dp">
+
+
+        <TextView
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/button_roundedge"
+            android:fontFamily="@font/fontstyle"
+            android:text="조도 하한선"
+            android:textSize="24sp" />
+
+        <EditText
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberSigned" />
+
+    </LinearLayout>
 
 
     <LinearLayout
-        android:id="@+id/layout"
+        android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="150dp"
+
         android:orientation="vertical">
 
         <Button
@@ -44,6 +73,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="add Button" />
+
+        <LinearLayout
+            android:id="@+id/layout2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
