--- a/app/src/main/res/layout/light.xml
+++ b/app/src/main/res/layout/light.xml
@@ -17,7 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
 
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="128dp"
@@ -40,8 +39,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="128dp"
