--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_gravity="center"
         android:orientation="vertical">
 
+
         <Button
             android:id="@+id/light_btn"
             android:layout_width="match_parent"
@@ -33,6 +34,10 @@
             android:background="@drawable/button_roundedge"
             android:fontFamily="@font/fontstyle"
             android:textStyle="bold"
+
+
+
+            android:drawablePadding="-600dp"
             android:text="light 화면전환"
             android:textColor="#212121" />
 
